tests/machine/x/ocaml/test_block.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/test_block.ml", line 23, characters 2-15:
23 |   print_endline "ok";
       ^^^^^^^^^^^^^
Error: Syntax error


Context (around line 23):
  21 |   let x : int = (1 + 2) in
  22 |   assert ((x = 3))
  23 |   print_endline "ok";
  24 | 
